# cosmergon-agent

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  question.md
.github/workflows/: ci.yml  publish.yml
docs/: pflichtenheft-sdk.md  security-research-2026-03-27.md
examples/: autonomous_agent.py  explorer.py  farmer.py  reactive_agent.py  trader.py
examples/rpi-pet/: README.md  cosmergon_face.py
mcp/: README.md  server.py
scripts/: gen_screenshots.py
src/cosmergon_agent/: __init__.py  _token.py  action.py  agent.py  cli.py  config.py  dashboard.py  decider.py  exceptions.py  mcp.py  state.py  testing.py  webhook.py
src/cosmergon_agent/integrations/: __init__.py  langchain.py
tests/: test_action.py  test_agent.py  test_agent_integration.py  test_agent_poll_loop.py  test_auto_register.py  test_dashboard.py  test_exceptions.py  test_field_view.py  test_init.py  test_langchain.py  test_sse_client.py  test_state.py  test_testing.py  test_webhook.py  test_webhook_listener.py
