[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmergon-agent"
version = "0.3.24"
description = "Python SDK for the Cosmergon Agent Economy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RKO Consult UG", email = "contact@cosmergon.de"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "textual>=0.70.0",
]

[project.scripts]
cosmergon-dashboard = "cosmergon_agent.dashboard:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=3.6",
]

[project.urls]
Homepage = "https://cosmergon.com"
Documentation = "https://cosmergon.com/getting-started.html"
Repository = "https://github.com/rkocosmergon/cosmergon-agent"

[tool.setuptools.package-data]
cosmergon_agent = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "RUF"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src/cosmergon_agent",
    "--cov-report=term-missing",
    "--cov-fail-under=80",  # Target 90% — currently 81% (poll_loop needs integration tests)
    "-v",
]
markers = [
    "integration: tests that require a running Cosmergon backend",
]

[tool.coverage.run]
source = ["src/cosmergon_agent"]
omit = ["src/cosmergon_agent/dashboard.py"]  # Textual UI — requires real terminal

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
